syntax = "proto3";

package auth;
option go_package = "/authorization/proto";

message FindIdRequest {
  string sid = 1;
}

message FindIdResponse {
  uint64 value = 1;
}

message AuthorizationCheckRequest {
  string sid = 1;
}

message AuthorizationCheckResponse {
  bool status = 1;
}

message RoleRequest {
  uint64 id = 1;
}

message RoleResponse {
  string role = 1;
}

message UserItemRequest {
  uint64 id = 1;
}

message UserItemResponse {
  string name = 1;
}


service Authorization {
  rpc GetId(FindIdRequest) returns (FindIdResponse) {}
  rpc GetAuthorizationStatus(AuthorizationCheckRequest) returns (AuthorizationCheckResponse) {}
  rpc GetRole(RoleRequest) returns (RoleResponse) {}
  rpc GetUserName(UserItemRequest) returns (UserItemResponse) {}
}